Fix validator not_blank message

--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -3,4 +3,4 @@ fluxse:
     form:
       captcha:
         is_valid_captcha: 'The CAPTCHA is invalid.'
-        not_empty: 'The CAPTCHA is required.'
+        not_blank: 'The CAPTCHA is required.'
